--- a/carrito/carrito.css
+++ b/carrito/carrito.css
@@ -126,7 +126,16 @@ header .menu a:hover::after {
     border-radius: var(--radio-bordes);
     border: 1px solid #ccc;
 }
-
+.cantidad button{
+    background-color:rgba(0,0,0,0.0);
+    text-decoration:underline;
+    color: black;
+    font-size: 1rem;
+    border: none;
+    border-radius: var(--radio-bordes);
+    cursor: pointer;
+    transition: all 0.3s;
+}
 /* Botón eliminar */
 .btn-eliminar {
     padding: 10px 15px;
